--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<html>
-    <head>
-        <meta charset='utf-8'>
-        <title>タイトル</title>
-    </head>
-    <body>
-        This is the first content.
-    </body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>ghpages</title><link href=/js/about.91566977.js rel=prefetch><link href=/css/app.522499e7.css rel=preload as=style><link href=/js/app.ea0dccb6.js rel=preload as=script><link href=/js/chunk-vendors.0850cebd.js rel=preload as=script><link href=/css/app.522499e7.css rel=stylesheet></head><body><noscript><strong>We're sorry but ghpages doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.0850cebd.js></script><script src=/js/app.ea0dccb6.js></script></body></html>
